--- a/style.css
+++ b/style.css
@@ -55,3 +55,7 @@ button:active{
 .operator-btn:hover{
     background-color: hsl(41, 83%, 68%)
 }
+@media query screen(max- width:500px){
+    body{
+        font-size:2px;}}
+        
