--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-
+body{
+    margin-top: 90px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    /* height:100px; */
+    background-color: hsl(0, 0%, 95%);
+}
 #keys{
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -6,11 +14,15 @@
     padding: 20px;
 
 }
-
+.myh1{
+ display: inline-block; 
+ align-items: flex-start;
+ 
+}
 button{
     width: 100px;
     height: 100px;
-    border-radius: 40px;
+    border-radius: 50px;
     border: none;
 
     background-color: hsl(0 , 0%, 15%);
@@ -22,26 +34,19 @@ button{
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 20%);
     border-radius: 15px;
-    max-width:400px;
+    max-width:500px;
     overflow: hidden;
 }
 #display{
-    width: 100%;
+    width: 109%;
     padding: 20px;
-    font-size: 3rem;
+    font-size: 5rem;
     text-align: left;
     color:rgb(12, 11, 11);
     border: none;
     /* border-radius: 2px solid rgb(208, 99, 99); */
 }
-body{
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 100vh;
-    background-color: hsl(0, 0%, 95%);
-}
+
 button:hover{
     background-color: hsl(0,0%,30%);
 }
@@ -55,26 +60,68 @@ button:active{
 .operator-btn:hover{
     background-color: hsl(41, 83%, 68%)
 }
-
-
-    
-    }
-@media (max-width: 600px) {
-    button ,#kyes{
+@media (max-width: 400px) {
+    button {
         width: 20vw;
         height: 20vw;
         font-size: 1.5rem;
     }
     
     #display {
-        font-size: 3rem;
+        font-size: 2rem;
     }
 }
 
-@media (max-width: 400px) {
+@media (min-width: 400px) {
     button {
         width: 25px;
         height: 25px;
         font-size: 1.2rem;
     }
+    @media (max-width: 100px) {
+        button {
+            width: 20vw;
+            height: 20vw;
+            font-size: 1.5rem;
+        }
         
+        #display {
+            font-size: 2rem;
+        }
+    }
+    
+    @media (min-width: 400px) {
+        button {
+            width: 25px;
+            height: 25px;
+            font-size: 1.2rem;
+        }
+    }
+/* @media only screen and (min-width: 600px) {
+    body,button,{
+        font-size : 2px;
+    }
+        
+        } */
+
+        /* @media only screen and (min-width: 400px) {
+            #display{
+                margin-top: 80px;
+                font-size : 2px;
+                width: 200px;
+            }
+                
+                }
+                @media only screen and (min-width: 400px) {
+                    #calculator{
+                        margin-top: 80px;
+                        font-size : 2px;
+                    }
+                        
+                        }
+                        @media only screen and (min-width: 600px) {
+                            button{
+                                width: 100px;
+                            }
+                                
+                                } */
